src/main/resources/kubernetes/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - Content-Type
    accessControlAllowOriginList:
      - "*"
    accessControlAllowCredentials: false
    accessControlMaxAge: 100
    addVaryHeader: true
