src/main/resources/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-update
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: javalin-api
  template:
    metadata:
      annotations:
        prometheus.io/port: "9464"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
      labels:
        app: javalin-api
    spec:
      containers:
        - ports:
            - containerPort: 8081
              name: http
            - containerPort: 9464
              name: otel-metrics
          name: javalin-api
          image: javalin-api:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
      restartPolicy: Always
  strategy:
    type: RollingUpdate
