src/main/resources/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: javalin-api
  ports:
    - name: http
      port: 80
      targetPort: http
